# queskabackend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  env.booking.template  env.example  env.expedia.template  env.notifications.template  env.sendgrid.template  env.stripe.template  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: activities.py  agents.py  auth.py  dashboards.py  experience_cards.py  experiences.py  geolocation.py  notifications.py  payments.py  travel_search.py  uploads.py  users.py  vendors.py
app/core/: config.py  constants.py  database.py  exceptions.py  security.py
app/models/: activity.py  admin.py  agent.py  base.py  consultant.py  destination.py  experience.py  experience_card.py  geolocation.py  notification.py  payment.py  user.py  vendor.py
app/repositories/: admin_repository.py  agent_repository.py  base.py  consultant_repository.py  user_repository.py  vendor_repository.py
app/schemas/: activity.py  agent.py  base.py  experience.py  experience_card.py  geolocation.py  notification.py  payment.py  travel.py  user.py  vendor.py
app/services/: activity_service.py  agent_service.py  email_service.py  experience_card_service.py  experience_service.py  geolocation_service.py  media_service.py  notification_service.py  payment_service.py  push_service.py  sms_service.py  travel_service.py  user_service.py  vendor_service.py
docs/: FRONTEND_INTEGRATION_GUIDE.md
integrations/maps/: __init__.py  geocoding.py  google_maps.py  mapbox_client.py
integrations/payments/: __init__.py  stripe_client.py
integrations/travel_apis/: __init__.py  booking_com.py  expedia.py  rapidapi_flights.py  rapidapi_hotels.py
